k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dprofiler
  labels:
    name: dprofiler
